fix(wine_card): wrap image in a fixed-size container

--- a/wine_cellar/assets/css/card.css
+++ b/wine_cellar/assets/css/card.css
@@ -88,6 +88,11 @@
   overflow-wrap: anywhere;
 }
 
+.wine-card__image-wrapper {
+  width: 150px;
+  height: 200px ;
+}
+
 .wine-card__img {
   max-height: 200px;
   max-width: 150px;
